Fix issue with coug head z-indexing wrong in site footers

--- a/components/src/site-footer/site-footer.scss
+++ b/components/src/site-footer/site-footer.scss
@@ -152,6 +152,7 @@
 
 	.wsu-s-footer__coug-watermark {
 		position: absolute;
+		z-index: z('decorative');
 		right: 60px;
 		bottom: 55px;
 
